<resources>
    <string name="app_name">Recipe App</string>
    <string name="nav_profile">Trang cá nhân</string>
    <string name="nav_favorite">Món đã thích</string>
    <string name="nav_my_kitchen">Bếp của tôi</string>
    <string name="nav_language">Ngôn ngữ</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="title_home">Trang chủ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>